--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <scrip src="jquery.min.js"></script>
+  <script src="jquery.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
